--- a/src/common/style.css
+++ b/src/common/style.css
@@ -15,3 +15,19 @@
   transform: scale(0.9);
   transition: opacity 300ms, transform 300ms;
 }
+
+
+.mask-enter {
+  opacity: 0;
+}
+.mask-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+.mask-exit {
+  opacity: 1;
+}
+.mask-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
